--- a/index.html
+++ b/index.html
@@ -1,1 +1,147 @@
+<!doctype html>
 
+<html lang="ru">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Football Team</title>
+  <style>
+    :root{--bg:#ffffff;--card:#f9fafb;--accent:#0ea5a4;--muted:#475569;--text:#0f172a}
+    *{box-sizing:border-box;font-family:Inter, Roboto, Arial, sans-serif}
+    body{margin:0;background:var(--bg);color:var(--text);min-height:100vh;display:flex;align-items:center;justify-content:center;padding:20px}
+    .app{width:100%;max-width:820px}
+    header{text-align:center;margin-bottom:18px}
+    header h1{font-size:22px;margin:0;font-weight:800}
+    .card{background:var(--card);border:1px solid #e2e8f0;padding:18px;border-radius:12px;box-shadow:0 2px 8px rgba(0,0,0,0.08)}
+    label{font-size:13px;color:var(--muted);display:block;margin-bottom:6px}
+    input{width:100%;padding:10px;border-radius:8px;border:1px solid #cbd5e1;background:#fff;color:var(--text)}
+    button{padding:10px 12px;border-radius:8px;border:none;background:var(--accent);color:#fff;font-weight:600;cursor:pointer}
+    .small{padding:6px 8px;font-size:13px}
+    .profile{display:flex;gap:12px;align-items:center;padding:12px;border-radius:10px;background:#fff;border:1px solid #e2e8f0;margin-top:12px}
+    .avatar{width:72px;height:72px;border-radius:10px;overflow:hidden;flex-shrink:0;background:#e2e8f0;display:flex;align-items:center;justify-content:center}
+    .avatar img{width:100%;height:100%;object-fit:cover}
+    .info{flex:1}
+    .meta{font-size:13px;color:var(--muted);margin-top:6px}
+    .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,0.5)}
+    .modal.show{display:flex}
+    .modal-content{width:100%;max-width:420px;background:#fff;color:var(--text)}
+  </style>
+</head>
+<body>
+  <div class="app">
+    <header>
+      <h1>Football Team</h1>
+    </header><main class="card">
+  <label for="name">Введите имя (Omer, Mustafa, Maqa или Boss)</label>
+  <input id="name" autocomplete="off" />
+  <div id="passwordBlock" style="display:none;margin-top:10px">
+    <label for="password">Пароль</label>
+    <input id="password" type="password" placeholder="Пароль для Boss" />
+  </div>
+  <div style="margin-top:10px">
+    <button id="loginBtn">Войти</button>
+  </div>
+  <div id="message" style="margin-top:10px;color:#dc2626;font-size:13px"></div>
+  <div id="profileArea"></div>
+</main>
+
+<div id="editModal" class="modal" role="dialog" aria-modal="true">
+  <div class="modal-content card">
+    <h3>Редактировать рейтинг</h3>
+    <label for="editRating">Рейтинг</label>
+    <input id="editRating" />
+    <div style="display:flex;gap:8px;margin-top:12px;justify-content:flex-end">
+      <button id="saveBtn">Сохранить</button>
+      <button id="closeBtn" class="small">Отмена</button>
+    </div>
+  </div>
+</div>
+
+  </div>  <script>
+    const defaultProfiles = {
+      Omer: {name:'Omer', level:12, cost:'100€', rating:86, photo:'omer.jpg'},
+      Mustafa: {name:'Mustafa', level:9, cost:'70€', rating:78, photo:'mustafa.jpg'},
+      Maqa: {name:'Maqa', level:14, cost:'50€', rating:91, photo:'maqa.jpg'}
+    };
+
+    const $ = id=>document.getElementById(id);
+    const profileArea = $('profileArea');
+    const messageEl = $('message');
+    const passwordBlock = $('passwordBlock');
+
+    let profiles = structuredClone(defaultProfiles);
+    let bossMode = false;
+    let currentTarget = null;
+
+    $('name').addEventListener('input',()=>{
+      if($('name').value.trim().toLowerCase()==='boss'){
+        passwordBlock.style.display='block';
+      } else {
+        passwordBlock.style.display='none';
+      }
+    });
+
+    $('loginBtn').addEventListener('click',()=>{
+      const name = $('name').value.trim();
+      if(!name){messageEl.textContent='Введите имя.';return}
+      if(name.toLowerCase()==='boss'){
+        const pwd = $('password').value.trim();
+        if(pwd!=='8181'){messageEl.textContent='Неверный пароль.';return}
+        bossMode = true;
+        renderBossPanel();
+        messageEl.textContent='';
+      } else {
+        if(!profiles[name]){messageEl.textContent='Профиль не найден.';return}
+        bossMode = false;
+        renderPlayer(name);
+        messageEl.textContent='';
+      }
+    });
+
+    function renderPlayer(name){
+      const p = profiles[name];
+      profileArea.innerHTML = `
+        <div class="profile">
+          <div class="avatar">${p.photo ? `<img src="${p.photo}" alt="${p.name}">` : ''}</div>
+          <div class="info">
+            <div style="font-weight:700">${p.name}</div>
+            <div class="meta">Уровень: <strong>${p.level}</strong></div>
+            <div class="meta">Стоимость: <strong>${p.cost}</strong></div>
+            <div class="meta">Рейтинг: <strong>${p.rating}</strong></div>
+          </div>
+        </div>
+      `;
+    }
+
+    function renderBossPanel(){
+      profileArea.innerHTML = '';
+      Object.values(profiles).forEach(p=>{
+        const card = document.createElement('div'); card.className='profile';
+        card.innerHTML = `
+          <div class="avatar">${p.photo ? `<img src="${p.photo}" alt="${p.name}">` : ''}</div>
+          <div class="info">
+            <div style="font-weight:700">${p.name}</div>
+            <div class="meta">Уровень: <strong>${p.level}</strong> · Стоимость: <strong>${p.cost}</strong></div>
+            <div class="meta">Рейтинг: <strong>${p.rating}</strong></div>
+          </div>
+          <div><button class="small" onclick="editRating('${p.name}')">Изм.</button></div>
+        `;
+        profileArea.appendChild(card);
+      });
+    }
+
+    function editRating(name){
+      currentTarget = name;
+      $('editRating').value = profiles[name].rating;
+      $('editModal').classList.add('show');
+    }
+
+    $('closeBtn').addEventListener('click',()=>$('editModal').classList.remove('show'));
+    $('saveBtn').addEventListener('click',()=>{
+      if(!currentTarget) return;
+      profiles[currentTarget].rating = Number($('editRating').value) || profiles[currentTarget].rating;
+      $('editModal').classList.remove('show');
+      if(bossMode){renderBossPanel();} else {renderPlayer(currentTarget);}
+    });
+  </script></body>
+</html>
